--- a/bonita-connector-cmis-createfolder-def/src/main/resources/cmis-createfolder_de.properties
+++ b/bonita-connector-cmis-createfolder-def/src/main/resources/cmis-createfolder_de.properties
@@ -1,12 +1,12 @@
 #X-Generator: crowdin.net
 cmis.category=CMIS
 connectorDefinitionLabel=Ordner erstellen
-connectorDefinitionDescription=Create a folder on a CMIS 1.1 server
+connectorDefinitionDescription=Ordner auf einem CMIS-1.1-Server erstellen
 
 server.pageTitle=Server
-server.pageDescription=Enter the server configuration
+server.pageDescription=Server-Konfiguration eingeben
 folder.pageTitle=Ordner
-folder.pageDescription=Enter the folder information
+folder.pageDescription=Ordnerinformationen eingeben
 
 url.label=URL
 url.description=Serveradresse eingeben
@@ -18,8 +18,8 @@ password.label=Passwort
 password.description=Passwort f\u00fcr die Verbindung eingeben
 repository.label=Repository-Name
 repository.description=Namen des Repositorys eingeben, aus dem der Ordner\nabgerufen werden soll,\nz. B. Haupt-Repository
-folder_path.label=Parent folder
-folder_path.description=Enter the parent folder path
+folder_path.label=\u00dcbergeordneter Ordner
+folder_path.description=Geben Sie den Pfad des \u00fcbergeordneten Ordners an
 subfolder_name.label=Ordnername
-subfolder_name.description=Enter the name of the folder to create
+subfolder_name.description=Geben Sie den Namen des Ordners ein, der erstellt werden soll
 
