--- a/bonita-connector-cmis-createfolder-def/src/main/resources/cmis-createfolder_es.properties
+++ b/bonita-connector-cmis-createfolder-def/src/main/resources/cmis-createfolder_es.properties
@@ -1,7 +1,7 @@
 #X-Generator: crowdin.net
 cmis.category=CMIS
 connectorDefinitionLabel=Crear carpeta
-connectorDefinitionDescription=Create a folder on a CMIS 1.1 server
+connectorDefinitionDescription=Crear una carpeta en el servidor CMIS 1.1
 
 server.pageTitle=Servidor
 server.pageDescription=Introduce la configuraci\u00f3n del servidor
