--- a/bonita-connector-cmis-createfolder-def/src/main/resources/cmis-createfolder_fr.properties
+++ b/bonita-connector-cmis-createfolder-def/src/main/resources/cmis-createfolder_fr.properties
@@ -1,7 +1,7 @@
 #X-Generator: crowdin.net
 cmis.category=CMIS
 connectorDefinitionLabel=Cr\u00e9ation d'un dossier
-connectorDefinitionDescription=Create a folder on a CMIS 1.1 server
+connectorDefinitionDescription=Cr\u00e9er un r\u00e9pertoire sur un serveur CMIS 1.1
 
 server.pageTitle=Serveur
 server.pageDescription=Saisissez la configuration du serveur
