--- a/bonita-connector-cmis-deletedocument-def/src/main/resources/cmis-deletedocument_de.properties
+++ b/bonita-connector-cmis-deletedocument-def/src/main/resources/cmis-deletedocument_de.properties
@@ -1,12 +1,12 @@
 #X-Generator: crowdin.net
 cmis.category=CMIS
-connectorDefinitionLabel=Delete a document
-connectorDefinitionDescription=Delete a document from a CMIS 1.1 server
+connectorDefinitionLabel=Dokument l\u00f6schen
+connectorDefinitionDescription=Dokument von einem CMIS-1.1-Server l\u00f6schen
 
 server.pageTitle=Server
-server.pageDescription=Enter the server configuration
+server.pageDescription=Server-Konfiguration eingeben
 document.pageTitle=Dokument
-document.pageDescription=Enter the document information
+document.pageDescription=Dokumenteninformationen eingeben
 
 url.label=URL
 url.description=Serveradresse eingeben
@@ -17,7 +17,7 @@ username.description=Benutzernamen f\u00fcr die Verbindung eingeben
 password.label=Passwort
 password.description=Passwort f\u00fcr die Verbindung eingeben
 repository.label=Repository-Name
-repository.description=Enter the name of the repository to retrieve the Document from\nfrom.\nEg. Main repository
+repository.description=Namen des Repositorys eingeben, aus dem das Dokument\nabgerufen werden soll,\nz. B. Haupt-Repository
 document_path.label=Dokument
-document_path.description=Enter the path to the document to delete
+document_path.description=Pfad des zu l\u00f6schenden Dokuments eingeben
 
