--- a/bonita-connector-cmis-deletedocument-def/src/main/resources/cmis-deletedocument_fr.properties
+++ b/bonita-connector-cmis-deletedocument-def/src/main/resources/cmis-deletedocument_fr.properties
@@ -1,12 +1,12 @@
 #X-Generator: crowdin.net
 cmis.category=CMIS
-connectorDefinitionLabel=Delete a document
-connectorDefinitionDescription=Delete a document from a CMIS 1.1 server
+connectorDefinitionLabel=Supprimer un document
+connectorDefinitionDescription=Supprimer un document sur un serveur CMIS 1.1
 
 server.pageTitle=Serveur
 server.pageDescription=Saisissez la configuration du serveur
 document.pageTitle=Document
-document.pageDescription=Enter the document information
+document.pageDescription=Renseigner les informations relatives au document
 
 url.label=URL
 url.description=Entrer l'adresse du serveur
@@ -17,7 +17,7 @@ username.description=Entrer le nom de l'utilisateur \u00e0 utiliser pour la conn
 password.label=Mot de passe
 password.description=Entrer le mot de passe \u00e0 utiliser pour la connexion
 repository.label=Nom du repository
-repository.description=Enter the name of the repository to retrieve the Document from\nfrom.\nEg. Main repository
+repository.description=Renseignez le nom du r\u00e9f\u00e9rentiel ou se trouve le Document \u00e0 r\u00e9cup\u00e9rer. Par exemple\: Main repository
 document_path.label=Document
-document_path.description=Enter the path to the document to delete
+document_path.description=Renseignez le chemin du document \u00e0 supprimer
 
