--- a/bonita-connector-cmis-deletefolder-def/src/main/resources/cmis-deletefolder_de.properties
+++ b/bonita-connector-cmis-deletefolder-def/src/main/resources/cmis-deletefolder_de.properties
@@ -1,12 +1,12 @@
 #X-Generator: crowdin.net
 cmis.category=CMIS
-connectorDefinitionLabel=Delete a folder
-connectorDefinitionDescription=Delete a folder from a CMIS 1.1 server
+connectorDefinitionLabel=Ordner l\u00f6schen
+connectorDefinitionDescription=Ordner von einem CMIS-1.1-Server l\u00f6schen
 
 server.pageTitle=Server
-server.pageDescription=Enter the server configuration
+server.pageDescription=Server-Konfiguration eingeben
 document.pageTitle=Ordner
-document.pageDescription=Enter the Folder information
+document.pageDescription=Ordnerinformationen eingeben
 
 url.label=URL
 url.description=Serveradresse eingeben
@@ -19,5 +19,5 @@ password.description=Passwort f\u00fcr die Verbindung eingeben
 repository.label=Repository-Name
 repository.description=Namen des Repositorys eingeben, aus dem der Ordner\nabgerufen werden soll,\nz. B. Haupt-Repository
 folder_path.label=Ordner
-folder_path.description=Enter the path to the folder to delete
+folder_path.description=Pfad des zu l\u00f6schenden Ordners eingeben
 
