--- a/bonita-connector-cmis-deletefolder-def/src/main/resources/cmis-deletefolder_it.properties
+++ b/bonita-connector-cmis-deletefolder-def/src/main/resources/cmis-deletefolder_it.properties
@@ -1,12 +1,12 @@
 #X-Generator: crowdin.net
 cmis.category=CMIS
-connectorDefinitionLabel=Delete a folder
-connectorDefinitionDescription=Delete a folder from a CMIS 1.1 server
+connectorDefinitionLabel=Elimina una cartella
+connectorDefinitionDescription=Elimina una cartella da un server CMIS 1.1
 
 server.pageTitle=Server
 server.pageDescription=Inserire la configurazione del server
 document.pageTitle=Cartella
-document.pageDescription=Enter the Folder information
+document.pageDescription=Inserire le informazioni della cartella
 
 url.label=URL
 url.description=Immetti l'indirizzo del server
@@ -19,5 +19,5 @@ password.description=Inserire la password da usare per la connessione
 repository.label=Nome repository
 repository.description=Inserire il nome del repository dal quale recuperare la cartella. Ad es. Repository principale
 folder_path.label=Cartella
-folder_path.description=Enter the path to the folder to delete
+folder_path.description=Immettere il percorso della cartella da eliminare
 
