--- a/bonita-connector-cmis-deleteversionofdocument-def/src/main/resources/cmis-deleteversionofdocument_fr.properties
+++ b/bonita-connector-cmis-deleteversionofdocument-def/src/main/resources/cmis-deleteversionofdocument_fr.properties
@@ -1,12 +1,12 @@
 #X-Generator: crowdin.net
 cmis.category=CMIS
-connectorDefinitionLabel=Delete a document version
-connectorDefinitionDescription=Delete a document version from a CMIS 1.1 server
+connectorDefinitionLabel=Supprimer une version de document
+connectorDefinitionDescription=Supprimer une version de document sur un serveur CMIS 1.1
 
 server.pageTitle=Serveur
 server.pageDescription=Saisissez la configuration du serveur
 document.pageTitle=Document
-document.pageDescription=Enter the document information
+document.pageDescription=Renseigner les informations relatives au document
 
 url.label=URL
 url.description=Entrer l'adresse du serveur
@@ -17,9 +17,9 @@ username.description=Entrer le nom de l'utilisateur \u00e0 utiliser pour la conn
 password.label=Mot de passe
 password.description=Entrer le mot de passe \u00e0 utiliser pour la connexion
 repository.label=Nom du repository
-repository.description=Enter the name of the repository to retrieve the Document from\nfrom.\nEg. Main repository
-documentPath.label=Document path
-documentPath.description=Enter the path to the document
-versionLabel.label=Version label
-versionLabel.description=Enter the label of the version of the document to delete
+repository.description=Renseignez le nom du r\u00e9f\u00e9rentiel ou se trouve le Document \u00e0 r\u00e9cup\u00e9rer. Par exemple\: Main repository
+documentPath.label=Chemin d'acc\u00e8s au document
+documentPath.description=Renseignez le chemin du document
+versionLabel.label=Libell\u00e9 de la version
+versionLabel.description=Indiquez la version du document \u00e0 supprimer
 
