--- a/bonita-connector-cmis-deleteversionofdocument-def/src/main/resources/cmis-deleteversionofdocument_it.properties
+++ b/bonita-connector-cmis-deleteversionofdocument-def/src/main/resources/cmis-deleteversionofdocument_it.properties
@@ -1,12 +1,12 @@
 #X-Generator: crowdin.net
 cmis.category=CMIS
-connectorDefinitionLabel=Delete a document version
-connectorDefinitionDescription=Delete a document version from a CMIS 1.1 server
+connectorDefinitionLabel=Elimina una versione del documento
+connectorDefinitionDescription=Elimina una versione del documento da un server CMIS 1.1
 
 server.pageTitle=Server
 server.pageDescription=Inserire la configurazione del server
 document.pageTitle=Documento
-document.pageDescription=Enter the document information
+document.pageDescription=Immettere le informazioni documento
 
 url.label=URL
 url.description=Immetti l'indirizzo del server
@@ -17,9 +17,9 @@ username.description=Inserisci l'username da utilizzare per la connessione
 password.label=Password
 password.description=Inserire la password da usare per la connessione
 repository.label=Nome repository
-repository.description=Enter the name of the repository to retrieve the Document from\nfrom.\nEg. Main repository
-documentPath.label=Document path
-documentPath.description=Enter the path to the document
-versionLabel.label=Version label
-versionLabel.description=Enter the label of the version of the document to delete
+repository.description=Immettere il nome del repository da cui recuperare il documento. Ad esempio\: repository principale
+documentPath.label=Percorso del documento
+documentPath.description=Immettere il percorso del documento
+versionLabel.label=Etichetta di versione
+versionLabel.description=Immettere l'etichetta della versione del documento da eliminare
 
