--- a/bonita-connector-cmis-deleteversionofdocument-def/src/main/resources/cmis-deleteversionofdocument_pt.properties
+++ b/bonita-connector-cmis-deleteversionofdocument-def/src/main/resources/cmis-deleteversionofdocument_pt.properties
@@ -1,12 +1,12 @@
 #X-Generator: crowdin.net
 cmis.category=CMIS
-connectorDefinitionLabel=Delete a document version
-connectorDefinitionDescription=Delete a document version from a CMIS 1.1 server
+connectorDefinitionLabel=Remover uma vers\u00e3o do documento
+connectorDefinitionDescription=Remover uma vers\u00e3o do documento de um servidor CMIS 1.1
 
 server.pageTitle=Servidor
-server.pageDescription=Enter the server configuration
+server.pageDescription=Insira a configura\u00e7\u00e3o do servidor
 document.pageTitle=Documento
-document.pageDescription=Enter the document information
+document.pageDescription=Inserir as informa\u00e7\u00f5es do documento
 
 url.label=URL
 url.description=Digite o endere\u00e7o do servidor
@@ -17,9 +17,9 @@ username.description=Digite o nome de usu\u00e1rio para usar a conex\u00e3o
 password.label=Senha
 password.description=Digite a senha para conectar-se
 repository.label=Nome do reposit\u00f3rio
-repository.description=Enter the name of the repository to retrieve the Document from\nfrom.\nEg. Main repository
-documentPath.label=Document path
-documentPath.description=Enter the path to the document
-versionLabel.label=Version label
-versionLabel.description=Enter the label of the version of the document to delete
+repository.description=Insira o nome do reposit\u00f3rio de onde deseja recuperar o documento.\nPor exemplo\: Reposit\u00f3rio principal
+documentPath.label=Caminho do documento
+documentPath.description=Insira o caminho do documento
+versionLabel.label=Etiqueta de vers\u00e3o
+versionLabel.description=Inserir a etiqueta da vers\u00e3o do documento para remover
 
