--- a/bonita-connector-cmis-downloaddocument-def/src/main/resources/cmis-downloaddocument_de.properties
+++ b/bonita-connector-cmis-downloaddocument-def/src/main/resources/cmis-downloaddocument_de.properties
@@ -1,12 +1,12 @@
 #X-Generator: crowdin.net
 cmis.category=CMIS
-connectorDefinitionLabel=Download a document
-connectorDefinitionDescription=Download a document from a CMIS 1.1 server
+connectorDefinitionLabel=Dokument herunterladen
+connectorDefinitionDescription=Dokument von einem CMIS-1.1-Server herunterladen
 
 server.pageTitle=Server
-server.pageDescription=Enter the server configuration
+server.pageDescription=Server-Konfiguration eingeben
 documentPage.pageTitle=Dokument
-documentPage.pageDescription=Enter the document information
+documentPage.pageDescription=Dokumenteninformationen eingeben
 
 url.label=URL
 url.description=Serveradresse eingeben
@@ -18,7 +18,7 @@ password.label=Passwort
 password.description=Passwort f\u00fcr die Verbindung eingeben
 repository.label=Repository-Name
 repository.description=Namen des Repositorys eingeben, aus dem der Ordner\nabgerufen werden soll,\nz. B. Haupt-Repository
-remote_document_path.label=Remote document path
-remote_document_path.description=Enter the remote document path of the document to download
+remote_document_path.label=Pfad f\u00fcr externes Dokument
+remote_document_path.description=Pfad des herunterzuladenden externen Dokuments eingeben
 
 
