--- a/bonita-connector-cmis-downloaddocument-def/src/main/resources/cmis-downloaddocument_fr.properties
+++ b/bonita-connector-cmis-downloaddocument-def/src/main/resources/cmis-downloaddocument_fr.properties
@@ -1,12 +1,12 @@
 #X-Generator: crowdin.net
 cmis.category=CMIS
-connectorDefinitionLabel=Download a document
-connectorDefinitionDescription=Download a document from a CMIS 1.1 server
+connectorDefinitionLabel=T\u00e9l\u00e9charger un document
+connectorDefinitionDescription=T\u00e9l\u00e9charger un document depuis un serveur CMIS 1.1
 
 server.pageTitle=Serveur
 server.pageDescription=Saisissez la configuration du serveur
 documentPage.pageTitle=Document
-documentPage.pageDescription=Enter the document information
+documentPage.pageDescription=Renseigner les informations relatives au document
 
 url.label=URL
 url.description=Entrer l'adresse du serveur
@@ -18,7 +18,7 @@ password.label=Mot de passe
 password.description=Entrer le mot de passe \u00e0 utiliser pour la connexion
 repository.label=Nom du repository
 repository.description=Entrer le nom du repository \u00e0 partir duquel r\u00e9cup\u00e9rer le \nr\u00e9pertoire.\nEx. Main repository
-remote_document_path.label=Remote document path
-remote_document_path.description=Enter the remote document path of the document to download
+remote_document_path.label=Chemin du document distant
+remote_document_path.description=Renseignez le chemin du document distant \u00e0 t\u00e9l\u00e9charger
 
 
