--- a/bonita-connector-cmis-downloaddocument-def/src/main/resources/cmis-downloaddocument_it.properties
+++ b/bonita-connector-cmis-downloaddocument-def/src/main/resources/cmis-downloaddocument_it.properties
@@ -1,12 +1,12 @@
 #X-Generator: crowdin.net
 cmis.category=CMIS
-connectorDefinitionLabel=Download a document
-connectorDefinitionDescription=Download a document from a CMIS 1.1 server
+connectorDefinitionLabel=Scarica un documento
+connectorDefinitionDescription=Scarica un documento da un server CMIS 1.1
 
 server.pageTitle=Server
 server.pageDescription=Inserire la configurazione del server
 documentPage.pageTitle=Documento
-documentPage.pageDescription=Enter the document information
+documentPage.pageDescription=Immettere le informazioni documento
 
 url.label=URL
 url.description=Immetti l'indirizzo del server
@@ -18,7 +18,7 @@ password.label=Password
 password.description=Inserire la password da usare per la connessione
 repository.label=Nome repository
 repository.description=Inserire il nome del repository dal quale recuperare la cartella. Ad es. Repository principale
-remote_document_path.label=Remote document path
-remote_document_path.description=Enter the remote document path of the document to download
+remote_document_path.label=Percorso remote del documento
+remote_document_path.description=Immettere il percorso del documento remoto da scaricare
 
 
