--- a/bonita-connector-cmis-uploadnewdocument-def/src/main/resources/cmis-uploadnewdocument_it.properties
+++ b/bonita-connector-cmis-uploadnewdocument-def/src/main/resources/cmis-uploadnewdocument_it.properties
@@ -1,12 +1,12 @@
 #X-Generator: crowdin.net
 cmis.category=CMIS
 connectorDefinitionLabel=Caricare un documento
-connectorDefinitionDescription=Upload a document to a CMIS 1.1 server
+connectorDefinitionDescription=Carica un documento su un server CMIS 1.1
 
 server.pageTitle=Server
 server.pageDescription=Inserire la configurazione del server
 documentPage.pageTitle=Documento
-documentPage.pageDescription=Enter the document information
+documentPage.pageDescription=Immettere le informazioni documento
 
 url.label=URL
 url.description=Immetti l'indirizzo del server
