--- a/bonita-connector-cmis-uploadnewversionofdocument-def/src/main/resources/cmis-uploadnewversionofdocument_es.properties
+++ b/bonita-connector-cmis-uploadnewversionofdocument-def/src/main/resources/cmis-uploadnewversionofdocument_es.properties
@@ -1,7 +1,7 @@
 #X-Generator: crowdin.net
 cmis.category=CMIS
-connectorDefinitionLabel=Upload a new version
-connectorDefinitionDescription=Upload a new document version to a CMIS 1.1 server
+connectorDefinitionLabel=Subir una nueva versi\u00f3n
+connectorDefinitionDescription=Subir una nueva versi\u00f3n de documento al servidor CMIS 1.1
 
 server.pageTitle=Servidor
 server.pageDescription=Introduce la configuraci\u00f3n del servidor
@@ -18,8 +18,8 @@ password.label=Contrase\u00f1a
 password.description=Introduzca la contrase\u00f1a que se utilizar\u00e1 para la conexi\u00f3n
 repository.label=Nombre de repositorio
 repository.description=Introduzca el nombre del repositorio desde el cual se va a recuperar la carpeta.\nEg. repositorio principal
-remote_document.label=Remote document
-remote_document.description=Enter the path to the remote document
+remote_document.label=Documento remoto
+remote_document.description=Introduce la ruta al documento remoto
 document.label=Nombre del documento
 document.description=Introduzca el nombre del documento a subir
 
