--- a/bonita-connector-cmis-uploadnewversionofdocument-def/src/main/resources/cmis-uploadnewversionofdocument_fr.properties
+++ b/bonita-connector-cmis-uploadnewversionofdocument-def/src/main/resources/cmis-uploadnewversionofdocument_fr.properties
@@ -1,7 +1,7 @@
 #X-Generator: crowdin.net
 cmis.category=CMIS
-connectorDefinitionLabel=Upload a new version
-connectorDefinitionDescription=Upload a new document version to a CMIS 1.1 server
+connectorDefinitionLabel=T\u00e9l\u00e9charger une nouvelle version
+connectorDefinitionDescription=T\u00e9l\u00e9charger une version de document sur un serveur CMIS 1.1
 
 server.pageTitle=Serveur
 server.pageDescription=Saisissez la configuration du serveur
@@ -18,8 +18,8 @@ password.label=Mot de passe
 password.description=Entrer le mot de passe \u00e0 utiliser pour la connexion
 repository.label=Nom du repository
 repository.description=Entrer le nom du repository \u00e0 partir duquel r\u00e9cup\u00e9rer le \nr\u00e9pertoire.\nEx. Main repository
-remote_document.label=Remote document
-remote_document.description=Enter the path to the remote document
+remote_document.label=Document distant
+remote_document.description=Renseignez le chemin du document distant
 document.label=Nom du document
 document.description=Entrez le nom du document \u00e0 uploader
 
