--- a/bonita-connector-cmis-uploadnewversionofdocument-def/src/main/resources/cmis-uploadnewversionofdocument_it.properties
+++ b/bonita-connector-cmis-uploadnewversionofdocument-def/src/main/resources/cmis-uploadnewversionofdocument_it.properties
@@ -1,7 +1,7 @@
 #X-Generator: crowdin.net
 cmis.category=CMIS
-connectorDefinitionLabel=Upload a new version
-connectorDefinitionDescription=Upload a new document version to a CMIS 1.1 server
+connectorDefinitionLabel=Carica una nuova versione
+connectorDefinitionDescription=Carica una nuova versione del documento su un server CMIS 1.1
 
 server.pageTitle=Server
 server.pageDescription=Inserire la configurazione del server
@@ -18,8 +18,8 @@ password.label=Password
 password.description=Inserire la password da usare per la connessione
 repository.label=Nome repository
 repository.description=Inserire il nome del repository dal quale recuperare la cartella. Ad es. Repository principale
-remote_document.label=Remote document
-remote_document.description=Enter the path to the remote document
+remote_document.label=Documento remoto
+remote_document.description=Immettere il percorso del documento remoto
 document.label=Nome del documento
 document.description=Immettere il nome del documento da caricare
 
