--- a/bonita-connector-cmis-createfolder-def/src/main/resources/cmis-createfolder_it.properties
+++ b/bonita-connector-cmis-createfolder-def/src/main/resources/cmis-createfolder_it.properties
@@ -1,7 +1,7 @@
 #X-Generator: crowdin.net
 cmis.category=CMIS
 connectorDefinitionLabel=crea cartella
-connectorDefinitionDescription=Create a folder on a CMIS 1.1 server
+connectorDefinitionDescription=Crea una cartella su un server CMIS 1.1
 
 server.pageTitle=Server
 server.pageDescription=Inserire la configurazione del server
