--- a/bonita-connector-cmis-createfolder-def/src/main/resources/cmis-createfolder_pt.properties
+++ b/bonita-connector-cmis-createfolder-def/src/main/resources/cmis-createfolder_pt.properties
@@ -1,12 +1,12 @@
 #X-Generator: crowdin.net
 cmis.category=CMIS
 connectorDefinitionLabel=Criar uma pasta
-connectorDefinitionDescription=Create a folder on a CMIS 1.1 server
+connectorDefinitionDescription=Criar uma pasta em um servidor CMIS 1.1
 
 server.pageTitle=Servidor
-server.pageDescription=Enter the server configuration
+server.pageDescription=Insira a configura\u00e7\u00e3o do servidor
 folder.pageTitle=Pasta
-folder.pageDescription=Enter the folder information
+folder.pageDescription=Insira a informa\u00e7\u00e3o da pasta
 
 url.label=URL
 url.description=Digite o endere\u00e7o do servidor
@@ -18,8 +18,8 @@ password.label=Senha
 password.description=Digite a senha para conectar-se
 repository.label=Nome do reposit\u00f3rio
 repository.description=Digite o nome do reposit\u00f3rio para recuperar a pasta. Por exemplo\: Reposit\u00f3rio principal
-folder_path.label=Parent folder
-folder_path.description=Enter the parent folder path
+folder_path.label=Pasta pai
+folder_path.description=Insira o caminho da pasta pai
 subfolder_name.label=Nome da pasta
-subfolder_name.description=Enter the name of the folder to create
+subfolder_name.description=Insira o nome da pasta para cri\u00e1-la
 
