--- a/bonita-connector-cmis-deletedocument-def/src/main/resources/cmis-deletedocument_es.properties
+++ b/bonita-connector-cmis-deletedocument-def/src/main/resources/cmis-deletedocument_es.properties
@@ -1,12 +1,12 @@
 #X-Generator: crowdin.net
 cmis.category=CMIS
-connectorDefinitionLabel=Delete a document
-connectorDefinitionDescription=Delete a document from a CMIS 1.1 server
+connectorDefinitionLabel=Eliminar un documento
+connectorDefinitionDescription=Eliminar un documento de un servidor de CMIS 1.1
 
 server.pageTitle=Servidor
 server.pageDescription=Introduce la configuraci\u00f3n del servidor
 document.pageTitle=Documento
-document.pageDescription=Enter the document information
+document.pageDescription=Introduzca la informaci\u00f3n del documento
 
 url.label=URL
 url.description=Introduzca la direcci\u00f3n del servidor
@@ -17,7 +17,7 @@ username.description=Introduzca el nombre de usuario que se utilizar\u00e1 para 
 password.label=Contrase\u00f1a
 password.description=Introduzca la contrase\u00f1a que se utilizar\u00e1 para la conexi\u00f3n
 repository.label=Nombre de repositorio
-repository.description=Enter the name of the repository to retrieve the Document from\nfrom.\nEg. Main repository
+repository.description=Introduce el nombre del repositorio desde donde recuperar el Document\nEj. Repositorio principal
 document_path.label=Documento
-document_path.description=Enter the path to the document to delete
+document_path.description=Introduzca la ruta del documento para eliminar
 
