--- a/bonita-connector-cmis-deletedocument-def/src/main/resources/cmis-deletedocument_it.properties
+++ b/bonita-connector-cmis-deletedocument-def/src/main/resources/cmis-deletedocument_it.properties
@@ -1,12 +1,12 @@
 #X-Generator: crowdin.net
 cmis.category=CMIS
-connectorDefinitionLabel=Delete a document
-connectorDefinitionDescription=Delete a document from a CMIS 1.1 server
+connectorDefinitionLabel=Elimina un documento
+connectorDefinitionDescription=Elimina un documento da un server CMIS 1.1
 
 server.pageTitle=Server
 server.pageDescription=Inserire la configurazione del server
 document.pageTitle=Documento
-document.pageDescription=Enter the document information
+document.pageDescription=Immettere le informazioni documento
 
 url.label=URL
 url.description=Immetti l'indirizzo del server
@@ -17,7 +17,7 @@ username.description=Inserisci l'username da utilizzare per la connessione
 password.label=Password
 password.description=Inserire la password da usare per la connessione
 repository.label=Nome repository
-repository.description=Enter the name of the repository to retrieve the Document from\nfrom.\nEg. Main repository
+repository.description=Immettere il nome del repository da cui recuperare il documento. Ad esempio\: repository principale
 document_path.label=Documento
-document_path.description=Enter the path to the document to delete
+document_path.description=Immettere il percorso del documento da eliminare
 
