--- a/bonita-connector-cmis-deletedocument-def/src/main/resources/cmis-deletedocument_pt.properties
+++ b/bonita-connector-cmis-deletedocument-def/src/main/resources/cmis-deletedocument_pt.properties
@@ -1,12 +1,12 @@
 #X-Generator: crowdin.net
 cmis.category=CMIS
-connectorDefinitionLabel=Delete a document
-connectorDefinitionDescription=Delete a document from a CMIS 1.1 server
+connectorDefinitionLabel=Remover um documento
+connectorDefinitionDescription=Remover um documento de um servidor CMIS 1.1
 
 server.pageTitle=Servidor
-server.pageDescription=Enter the server configuration
+server.pageDescription=Insira a configura\u00e7\u00e3o do servidor
 document.pageTitle=Documento
-document.pageDescription=Enter the document information
+document.pageDescription=Inserir as informa\u00e7\u00f5es do documento
 
 url.label=URL
 url.description=Digite o endere\u00e7o do servidor
@@ -17,7 +17,7 @@ username.description=Digite o nome de usu\u00e1rio para usar a conex\u00e3o
 password.label=Senha
 password.description=Digite a senha para conectar-se
 repository.label=Nome do reposit\u00f3rio
-repository.description=Enter the name of the repository to retrieve the Document from\nfrom.\nEg. Main repository
+repository.description=Insira o nome do reposit\u00f3rio de onde deseja recuperar o documento.\nPor exemplo\: Reposit\u00f3rio principal
 document_path.label=Documento
-document_path.description=Enter the path to the document to delete
+document_path.description=Inserir o caminho do documento a ser removido
 
