--- a/bonita-connector-cmis-deletefolder-def/src/main/resources/cmis-deletefolder_es.properties
+++ b/bonita-connector-cmis-deletefolder-def/src/main/resources/cmis-deletefolder_es.properties
@@ -1,12 +1,12 @@
 #X-Generator: crowdin.net
 cmis.category=CMIS
-connectorDefinitionLabel=Delete a folder
-connectorDefinitionDescription=Delete a folder from a CMIS 1.1 server
+connectorDefinitionLabel=Eliminar una carpeta
+connectorDefinitionDescription=Eliminar una carpeta de un servidor de CMIS 1.1
 
 server.pageTitle=Servidor
 server.pageDescription=Introduce la configuraci\u00f3n del servidor
 document.pageTitle=Carpeta
-document.pageDescription=Enter the Folder information
+document.pageDescription=Introduzca la informaci\u00f3n de la carpeta
 
 url.label=URL
 url.description=Introduzca la direcci\u00f3n del servidor
@@ -19,5 +19,5 @@ password.description=Introduzca la contrase\u00f1a que se utilizar\u00e1 para la
 repository.label=Nombre de repositorio
 repository.description=Introduzca el nombre del repositorio desde el cual se va a recuperar la carpeta.\nEg. repositorio principal
 folder_path.label=Carpeta
-folder_path.description=Enter the path to the folder to delete
+folder_path.description=Introduce la ruta a la carpeta a borrar
 
