--- a/bonita-connector-cmis-deletefolder-def/src/main/resources/cmis-deletefolder_fr.properties
+++ b/bonita-connector-cmis-deletefolder-def/src/main/resources/cmis-deletefolder_fr.properties
@@ -1,12 +1,12 @@
 #X-Generator: crowdin.net
 cmis.category=CMIS
-connectorDefinitionLabel=Delete a folder
-connectorDefinitionDescription=Delete a folder from a CMIS 1.1 server
+connectorDefinitionLabel=Supprimer un r\u00e9pertoire
+connectorDefinitionDescription=Supprimer un r\u00e9pertoire sur un serveur CMIS 1.1
 
 server.pageTitle=Serveur
 server.pageDescription=Saisissez la configuration du serveur
 document.pageTitle=Dossier
-document.pageDescription=Enter the Folder information
+document.pageDescription=Renseigner les informations relatives au r\u00e9pertoire
 
 url.label=URL
 url.description=Entrer l'adresse du serveur
@@ -19,5 +19,5 @@ password.description=Entrer le mot de passe \u00e0 utiliser pour la connexion
 repository.label=Nom du repository
 repository.description=Entrer le nom du repository \u00e0 partir duquel r\u00e9cup\u00e9rer le \nr\u00e9pertoire.\nEx. Main repository
 folder_path.label=Dossier
-folder_path.description=Enter the path to the folder to delete
+folder_path.description=Renseignez le chemin du r\u00e9pertoire \u00e0 supprimer
 
