--- a/bonita-connector-cmis-deletefolder-def/src/main/resources/cmis-deletefolder_pt.properties
+++ b/bonita-connector-cmis-deletefolder-def/src/main/resources/cmis-deletefolder_pt.properties
@@ -1,12 +1,12 @@
 #X-Generator: crowdin.net
 cmis.category=CMIS
-connectorDefinitionLabel=Delete a folder
-connectorDefinitionDescription=Delete a folder from a CMIS 1.1 server
+connectorDefinitionLabel=Remover uma pasta
+connectorDefinitionDescription=Remover uma pasta de um servidor CMIS 1.1
 
 server.pageTitle=Servidor
-server.pageDescription=Enter the server configuration
+server.pageDescription=Insira a configura\u00e7\u00e3o do servidor
 document.pageTitle=Pasta
-document.pageDescription=Enter the Folder information
+document.pageDescription=Inserir a informa\u00e7\u00e3o da pasta
 
 url.label=URL
 url.description=Digite o endere\u00e7o do servidor
@@ -19,5 +19,5 @@ password.description=Digite a senha para conectar-se
 repository.label=Nome do reposit\u00f3rio
 repository.description=Digite o nome do reposit\u00f3rio para recuperar a pasta. Por exemplo\: Reposit\u00f3rio principal
 folder_path.label=Pasta
-folder_path.description=Enter the path to the folder to delete
+folder_path.description=Inserir o caminho da pasta a ser removida
 
