--- a/bonita-connector-cmis-deleteversionofdocument-def/src/main/resources/cmis-deleteversionofdocument_de.properties
+++ b/bonita-connector-cmis-deleteversionofdocument-def/src/main/resources/cmis-deleteversionofdocument_de.properties
@@ -1,12 +1,12 @@
 #X-Generator: crowdin.net
 cmis.category=CMIS
-connectorDefinitionLabel=Delete a document version
-connectorDefinitionDescription=Delete a document version from a CMIS 1.1 server
+connectorDefinitionLabel=Dokumentenversion l\u00f6schen
+connectorDefinitionDescription=Dokumentenversion von einem CMIS-1.1-Server l\u00f6schen
 
 server.pageTitle=Server
-server.pageDescription=Enter the server configuration
+server.pageDescription=Server-Konfiguration eingeben
 document.pageTitle=Dokument
-document.pageDescription=Enter the document information
+document.pageDescription=Dokumenteninformationen eingeben
 
 url.label=URL
 url.description=Serveradresse eingeben
@@ -17,9 +17,9 @@ username.description=Benutzernamen f\u00fcr die Verbindung eingeben
 password.label=Passwort
 password.description=Passwort f\u00fcr die Verbindung eingeben
 repository.label=Repository-Name
-repository.description=Enter the name of the repository to retrieve the Document from\nfrom.\nEg. Main repository
-documentPath.label=Document path
-documentPath.description=Enter the path to the document
-versionLabel.label=Version label
-versionLabel.description=Enter the label of the version of the document to delete
+repository.description=Namen des Repositorys eingeben, aus dem das Dokument\nabgerufen werden soll,\nz. B. Haupt-Repository
+documentPath.label=Dokumentenpfad
+documentPath.description=Dokumentenpfad eingeben
+versionLabel.label=Versions-Label
+versionLabel.description=Versions-Label des zu l\u00f6schenden Dokuments eingeben
 
