--- a/bonita-connector-cmis-deleteversionofdocument-def/src/main/resources/cmis-deleteversionofdocument_es.properties
+++ b/bonita-connector-cmis-deleteversionofdocument-def/src/main/resources/cmis-deleteversionofdocument_es.properties
@@ -1,12 +1,12 @@
 #X-Generator: crowdin.net
 cmis.category=CMIS
-connectorDefinitionLabel=Delete a document version
-connectorDefinitionDescription=Delete a document version from a CMIS 1.1 server
+connectorDefinitionLabel=Eliminar una versi\u00f3n del documento
+connectorDefinitionDescription=Eliminar una versi\u00f3n del documento de un servidor CMIS 1.1
 
 server.pageTitle=Servidor
 server.pageDescription=Introduce la configuraci\u00f3n del servidor
 document.pageTitle=Documento
-document.pageDescription=Enter the document information
+document.pageDescription=Introduzca la informaci\u00f3n del documento
 
 url.label=URL
 url.description=Introduzca la direcci\u00f3n del servidor
@@ -17,9 +17,9 @@ username.description=Introduzca el nombre de usuario que se utilizar\u00e1 para 
 password.label=Contrase\u00f1a
 password.description=Introduzca la contrase\u00f1a que se utilizar\u00e1 para la conexi\u00f3n
 repository.label=Nombre de repositorio
-repository.description=Enter the name of the repository to retrieve the Document from\nfrom.\nEg. Main repository
-documentPath.label=Document path
-documentPath.description=Enter the path to the document
-versionLabel.label=Version label
-versionLabel.description=Enter the label of the version of the document to delete
+repository.description=Introduce el nombre del repositorio desde donde recuperar el Document\nEj. Repositorio principal
+documentPath.label=Ruta del documento
+documentPath.description=Introduce la ruta al documento
+versionLabel.label=Etiqueta de versi\u00f3n
+versionLabel.description=Introduce la etiqueta de la versi\u00f3n del documento a eliminar
 
