--- a/bonita-connector-cmis-downloaddocument-def/src/main/resources/cmis-downloaddocument_es.properties
+++ b/bonita-connector-cmis-downloaddocument-def/src/main/resources/cmis-downloaddocument_es.properties
@@ -1,12 +1,12 @@
 #X-Generator: crowdin.net
 cmis.category=CMIS
-connectorDefinitionLabel=Download a document
-connectorDefinitionDescription=Download a document from a CMIS 1.1 server
+connectorDefinitionLabel=Descargar un documento
+connectorDefinitionDescription=Descargar un documento desde un servidor CMIS 1.1
 
 server.pageTitle=Servidor
 server.pageDescription=Introduce la configuraci\u00f3n del servidor
 documentPage.pageTitle=Documento
-documentPage.pageDescription=Enter the document information
+documentPage.pageDescription=Introduzca la informaci\u00f3n del documento
 
 url.label=URL
 url.description=Introduzca la direcci\u00f3n del servidor
@@ -18,7 +18,7 @@ password.label=Contrase\u00f1a
 password.description=Introduzca la contrase\u00f1a que se utilizar\u00e1 para la conexi\u00f3n
 repository.label=Nombre de repositorio
 repository.description=Introduzca el nombre del repositorio desde el cual se va a recuperar la carpeta.\nEg. repositorio principal
-remote_document_path.label=Remote document path
-remote_document_path.description=Enter the remote document path of the document to download
+remote_document_path.label=Ruta del documento remoto
+remote_document_path.description=Introduce la ruta al documento remoto que desea descargar
 
 
