--- a/bonita-connector-cmis-downloaddocument-def/src/main/resources/cmis-downloaddocument_pt.properties
+++ b/bonita-connector-cmis-downloaddocument-def/src/main/resources/cmis-downloaddocument_pt.properties
@@ -1,12 +1,12 @@
 #X-Generator: crowdin.net
 cmis.category=CMIS
-connectorDefinitionLabel=Download a document
-connectorDefinitionDescription=Download a document from a CMIS 1.1 server
+connectorDefinitionLabel=Baixar um documento
+connectorDefinitionDescription=Baixar um documento de um servidor CMIS 1.1
 
 server.pageTitle=Servidor
-server.pageDescription=Enter the server configuration
+server.pageDescription=Insira a configura\u00e7\u00e3o do servidor
 documentPage.pageTitle=Documento
-documentPage.pageDescription=Enter the document information
+documentPage.pageDescription=Inserir as informa\u00e7\u00f5es do documento
 
 url.label=URL
 url.description=Digite o endere\u00e7o do servidor
@@ -18,7 +18,7 @@ password.label=Senha
 password.description=Digite a senha para conectar-se
 repository.label=Nome do reposit\u00f3rio
 repository.description=Digite o nome do reposit\u00f3rio para recuperar a pasta. Por exemplo\: Reposit\u00f3rio principal
-remote_document_path.label=Remote document path
-remote_document_path.description=Enter the remote document path of the document to download
+remote_document_path.label=Caminho do documento remoto
+remote_document_path.description=Insira o caminho remoto do documento a ser baixado
 
 
