--- a/bonita-connector-cmis-uploadnewdocument-def/src/main/resources/cmis-uploadnewdocument_de.properties
+++ b/bonita-connector-cmis-uploadnewdocument-def/src/main/resources/cmis-uploadnewdocument_de.properties
@@ -1,12 +1,12 @@
 #X-Generator: crowdin.net
 cmis.category=CMIS
-connectorDefinitionLabel=Upload a document
-connectorDefinitionDescription=Upload a document to a CMIS 1.1 server
+connectorDefinitionLabel=Hochladen eines Dokuments
+connectorDefinitionDescription=Dokument auf einen CMIS-1.1-Server hochladen
 
 server.pageTitle=Server
-server.pageDescription=Enter the server configuration
+server.pageDescription=Server-Konfiguration eingeben
 documentPage.pageTitle=Dokument
-documentPage.pageDescription=Enter the document information
+documentPage.pageDescription=Dokumenteninformationen eingeben
 
 url.label=URL
 url.description=Serveradresse eingeben
@@ -18,10 +18,10 @@ password.label=Passwort
 password.description=Passwort f\u00fcr die Verbindung eingeben
 repository.label=Repository-Name
 repository.description=Namen des Repositorys eingeben, aus dem der Ordner\nabgerufen werden soll,\nz. B. Haupt-Repository
-folder_path.label=Parent folder
-folder_path.description=Enter the parent folder path
-document.label=Document name
-document.description=Enter the name of the document to upload
-destinationName.label=Destination name
-destinationName.description=Enter the name of the destination file
+folder_path.label=\u00dcbergeordneter Ordner
+folder_path.description=Geben Sie den Pfad des \u00fcbergeordneten Ordners an
+document.label=Dokumentname
+document.description=Geben Sie den Namen des Dokuments ein, das hochgeladen werden soll
+destinationName.label=Zielname
+destinationName.description=Geben Sie den Namen der Zieldatei ein
 
