--- a/bonita-connector-cmis-uploadnewdocument-def/src/main/resources/cmis-uploadnewdocument_es.properties
+++ b/bonita-connector-cmis-uploadnewdocument-def/src/main/resources/cmis-uploadnewdocument_es.properties
@@ -1,12 +1,12 @@
 #X-Generator: crowdin.net
 cmis.category=CMIS
 connectorDefinitionLabel=Sube un documento
-connectorDefinitionDescription=Upload a document to a CMIS 1.1 server
+connectorDefinitionDescription=Subir un documento al servidor CMIS 1.1
 
 server.pageTitle=Servidor
 server.pageDescription=Introduce la configuraci\u00f3n del servidor
 documentPage.pageTitle=Documento
-documentPage.pageDescription=Enter the document information
+documentPage.pageDescription=Introduzca la informaci\u00f3n del documento
 
 url.label=URL
 url.description=Introduzca la direcci\u00f3n del servidor
