--- a/bonita-connector-cmis-uploadnewdocument-def/src/main/resources/cmis-uploadnewdocument_fr.properties
+++ b/bonita-connector-cmis-uploadnewdocument-def/src/main/resources/cmis-uploadnewdocument_fr.properties
@@ -1,12 +1,12 @@
 #X-Generator: crowdin.net
 cmis.category=CMIS
 connectorDefinitionLabel=Ajouter un document
-connectorDefinitionDescription=Upload a document to a CMIS 1.1 server
+connectorDefinitionDescription=T\u00e9l\u00e9charger un document sur un serveur CMIS 1.1
 
 server.pageTitle=Serveur
 server.pageDescription=Saisissez la configuration du serveur
 documentPage.pageTitle=Document
-documentPage.pageDescription=Enter the document information
+documentPage.pageDescription=Renseigner les informations relatives au document
 
 url.label=URL
 url.description=Entrer l'adresse du serveur
