--- a/bonita-connector-cmis-uploadnewdocument-def/src/main/resources/cmis-uploadnewdocument_pt.properties
+++ b/bonita-connector-cmis-uploadnewdocument-def/src/main/resources/cmis-uploadnewdocument_pt.properties
@@ -1,12 +1,12 @@
 #X-Generator: crowdin.net
 cmis.category=CMIS
-connectorDefinitionLabel=Upload a document
-connectorDefinitionDescription=Upload a document to a CMIS 1.1 server
+connectorDefinitionLabel=Envie um documento
+connectorDefinitionDescription=Carregar um documento para um servidor CMIS 1.1
 
 server.pageTitle=Servidor
-server.pageDescription=Enter the server configuration
+server.pageDescription=Insira a configura\u00e7\u00e3o do servidor
 documentPage.pageTitle=Documento
-documentPage.pageDescription=Enter the document information
+documentPage.pageDescription=Inserir as informa\u00e7\u00f5es do documento
 
 url.label=URL
 url.description=Digite o endere\u00e7o do servidor
@@ -18,10 +18,10 @@ password.label=Senha
 password.description=Digite a senha para conectar-se
 repository.label=Nome do reposit\u00f3rio
 repository.description=Digite o nome do reposit\u00f3rio para recuperar a pasta. Por exemplo\: Reposit\u00f3rio principal
-folder_path.label=Parent folder
-folder_path.description=Enter the parent folder path
-document.label=Document name
-document.description=Enter the name of the document to upload
-destinationName.label=Destination name
-destinationName.description=Enter the name of the destination file
+folder_path.label=Pasta pai
+folder_path.description=Insira o caminho da pasta pai
+document.label=Nome do documento
+document.description=Insira o nome do documento para envi\u00e1-lo
+destinationName.label=Nome do destino
+destinationName.description=Insira o nome do arquivo de destino
 
