--- a/bonita-connector-cmis-uploadnewversionofdocument-def/src/main/resources/cmis-uploadnewversionofdocument_de.properties
+++ b/bonita-connector-cmis-uploadnewversionofdocument-def/src/main/resources/cmis-uploadnewversionofdocument_de.properties
@@ -1,12 +1,12 @@
 #X-Generator: crowdin.net
 cmis.category=CMIS
-connectorDefinitionLabel=Upload a new version
-connectorDefinitionDescription=Upload a new document version to a CMIS 1.1 server
+connectorDefinitionLabel=Neue Version hochladen
+connectorDefinitionDescription=Neue Dokumentenversion auf einen CMIS-1.1.-Server hochladen
 
 server.pageTitle=Server
-server.pageDescription=Enter the server configuration
+server.pageDescription=Server-Konfiguration eingeben
 documentPage.pageTitle=Dokument
-documentPage.pageDescription=Enter the document to upload information
+documentPage.pageDescription=Geben Sie das Dokument ein, um Informationen hochzuladen
 
 url.label=URL
 url.description=Serveradresse eingeben
@@ -18,8 +18,8 @@ password.label=Passwort
 password.description=Passwort f\u00fcr die Verbindung eingeben
 repository.label=Repository-Name
 repository.description=Namen des Repositorys eingeben, aus dem der Ordner\nabgerufen werden soll,\nz. B. Haupt-Repository
-remote_document.label=Remote document
-remote_document.description=Enter the path to the remote document
-document.label=Document name
-document.description=Enter the name of the document to upload
+remote_document.label=Externes Dokument
+remote_document.description=Pfad zum externen Dokument eingeben
+document.label=Dokumentname
+document.description=Geben Sie den Namen des Dokuments ein, das hochgeladen werden soll
 
