--- a/bonita-connector-cmis-uploadnewversionofdocument-def/src/main/resources/cmis-uploadnewversionofdocument_pt.properties
+++ b/bonita-connector-cmis-uploadnewversionofdocument-def/src/main/resources/cmis-uploadnewversionofdocument_pt.properties
@@ -1,12 +1,12 @@
 #X-Generator: crowdin.net
 cmis.category=CMIS
-connectorDefinitionLabel=Upload a new version
-connectorDefinitionDescription=Upload a new document version to a CMIS 1.1 server
+connectorDefinitionLabel=Carregar uma nova vers\u00e3o
+connectorDefinitionDescription=Carregar uma nova vers\u00e3o do documento para um servidor CMIS 1.1
 
 server.pageTitle=Servidor
-server.pageDescription=Enter the server configuration
+server.pageDescription=Insira a configura\u00e7\u00e3o do servidor
 documentPage.pageTitle=Documento
-documentPage.pageDescription=Enter the document to upload information
+documentPage.pageDescription=Insira o documento para carregar suas informa\u00e7\u00f5es
 
 url.label=URL
 url.description=Digite o endere\u00e7o do servidor
@@ -18,8 +18,8 @@ password.label=Senha
 password.description=Digite a senha para conectar-se
 repository.label=Nome do reposit\u00f3rio
 repository.description=Digite o nome do reposit\u00f3rio para recuperar a pasta. Por exemplo\: Reposit\u00f3rio principal
-remote_document.label=Remote document
-remote_document.description=Enter the path to the remote document
-document.label=Document name
-document.description=Enter the name of the document to upload
+remote_document.label=Documento remoto
+remote_document.description=Insira o caminho do documento remoto
+document.label=Nome do documento
+document.description=Insira o nome do documento para envi\u00e1-lo
 
