Translation validation feedbacks integration

--- a/bonita-connector-cmis-listdocuments-def/src/main/resources/cmis-listdocuments_es.properties
+++ b/bonita-connector-cmis-listdocuments-def/src/main/resources/cmis-listdocuments_es.properties
@@ -1,22 +1,22 @@
 #X-Generator: crowdin.net
 cmis.category=CMIS
-connectorDefinitionLabel=Enumerar documentos
-connectorDefinitionDescription=Enumera los documents de una carpeta de un servidor CMIS 1.1
+connectorDefinitionLabel=Listar documentos
+connectorDefinitionDescription=Lista los documents de una carpeta de un servidor CMIS 1.1
 
 server.pageTitle=Servidor
-server.pageDescription=Entre la configuración del servidor
+server.pageDescription=Introduce la configuración del servidor
 folder.pageTitle=Carpeta
-folder.pageDescription=Entre la ruta de la carpeta
+folder.pageDescription=Introduce la ruta de la carpeta
 
 url.label=URL
-url.description=Entre la dirección del servidor
+url.description=Introduce la dirección del servidor
 binding_type.label=Tipo de enlace
-binding_type.description=Seleccione el tipo de enlace para la connección. \nCMIS soporta accesso a Atom o a servicios Web.
+binding_type.description=Seleccione el tipo de enlace para la connexión. \nCMIS soporta acceso mediante Atom o WebService.
 username.label=Nombre de usuario
-username.description=Entre el nombre de usuario para la connección
+username.description=Introduce el nombre de usuario para la connexión
 password.label=Contraseña
-password.description=Entre la contraseña para la connección
+password.description=Introduce la contraseña para la connexión
 repository.label=Nombre del repositorio
-repository.description=Entre el nombre del repositorio desde el cual recuperar el contenido de la carpeta \nEj. Main repository
+repository.description=Introduce el nombre del repositorio desde el cual recuperar el contenido de la carpeta \nEj. Main repository
 folder_path.label=Ruta de la carpeta
-folder_path.description=Entre la ruta de la carpeta
+folder_path.description=Introduce la ruta de la carpeta
