--- a/bonita-connector-cmis-uploadnewdocuments-def/src/main/resources/cmis-uploadnewdocuments_es.properties
+++ b/bonita-connector-cmis-uploadnewdocuments-def/src/main/resources/cmis-uploadnewdocuments_es.properties
@@ -3,30 +3,29 @@ connectorDefinitionLabel=Subir una lista de documentos
 connectorDefinitionDescription=Subir una lista de documentos en un servidor CMIS 1.1
 
 server.pageTitle=Servidor
-server.pageDescription=Entre los elementos de configuración del servidor
+server.pageDescription=Introduce los elementos de configuración del servidor
 documentPage.pageTitle=Documento
-documentPage.pageDescription=Entre las informaciónes del documento
+documentPage.pageDescription=Introduce las informaciónes del documento
 
 url.label=URL Atompub
-url.description=Entre la dirección del servidor
+url.description=Introduce la dirección del servidor
 binding_type.label=Tipo de enlace
-binding_type.description=Seleccione el tipo de enlace para la connección. \nCMIS soporta accesso a Atom o a servicios Web.
+binding_type.description=Seleccione el tipo de enlace para la connexión. \nCMIS soporta acceso mediante Atom o WebService.
 username.label=Nombre de usuario
-username.description=Entre el nombre de usuario para la connección
+username.description=Introduce el nombre de usuario para la connexión
 password.label=Contraseña
-password.description=Entre la contraseña para la connección
+password.description=Introduce la contraseña para la connexión
 repository.label=Nombre del repositorio
-repository.description=Entre el nombre del repositorio desde el cual recuperar la carpeta
+repository.description=Introduce el nombre del repositorio desde el cual recuperar la carpeta
 folder_path.label=Carpeta padre
-folder_path.description=Introduzca la ruta hacia la carpeta padre
+folder_path.description=Introduzca la ruta a la carpeta padre
 documents.label=Lista de documentos
 documents.description=Introduzca el nombre del documento multiple para subir
-atompubConfigGroup.label=Configuración de Atompub 
-atompubConfigGroup.description=Si utilice el enlace atompub, debe entrar una URL Atompub
-wsServiceConfigGroup.label=URL del servicio (solamente para servicios Web)
-wsServiceConfigGroup.description=Si utilice el enlace 'Webservices', debe entra la URL del servicio CMIS (o la URL del endpoint) de su proveedor CMIS.
-wsRepositoryServiceUrl.label=URL del repositorio de servicio Web
-wsRepositoryServiceEndpointUrl.label=URL del endpoint del repositorio de servicio Web
-wsObjectServiceUrl.label=URL del Objeto de servicio Web
-wsObjectServiceEndpointUrl.label=URL del endpoint del Objeto de servicio Web
-
+atompubConfigGroup.label=Configuración de Atompub
+atompubConfigGroup.description=Si utiliza el enlace Atompub, debe introducir una URL Atompub
+wsServiceConfigGroup.label=URL del servicio (solamente para WebServices)
+wsServiceConfigGroup.description=Si utiliza el enlace 'WebServices', debe introducir la URL del servicio CMIS (o la URL del endpoint) de su proveedor CMIS.
+wsRepositoryServiceUrl.label=URL del repositorio de WebService
+wsRepositoryServiceEndpointUrl.label=URL del endpoint del repositorio de WebService
+wsObjectServiceUrl.label=URL del Objeto de WebService
+wsObjectServiceEndpointUrl.label=URL del endpoint del Objeto de WebService
